--- a/Snake Game/style.css
+++ b/Snake Game/style.css
@@ -1,17 +1,69 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-html,body{
+html,
+body {
     height: 100%;
     width: 100%;
 
 }
 
-html{
-    background-color: black;
-    color: white;
+:root {
+    /* backgound colors */
+    --bg--primary--color: #2a2a2a;
+
+    /* text colors */
+    --text-primary-color: #ececec;
+
+    /* spacing variables */
+    --space-xs: 4px;
+    --space-sm: 8px;
+    --space-md: 16px;
+    --space-lg: 24px;
+    --space-xl: 32px;
+    --space-2xl: 40px;
+    --space-3xl: 48px;
+
+
+    /* border colors */
+
+    --border-primary-color: #333333;
+
+    /* border radius */
+    --radius-xs: 4px;
+    --radius-sm: 8px;
+    --radius-md: 12px;
+    --radius-lg: 16px;
+    --radius-xl: 20px;
+    --radius-2xl: 24px;
 }
 
+html {
+    background-color: var(--bg--primary--color);
+    color: var(--text-primary-color);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+main,
+section {
+    width: 100%;
+    height: 100%;
+}
+
+section .infos {
+    display: flex;
+    justify-content: space-between;
+}
+
+section {
+    padding: var(--space-2xl);
+
+}
+
+.info {
+    padding: var(--space-sm) var(--space-md);
+    border: 1px solid var(--border-primary-color);
+}
