--- a/Snake Game/style.css
+++ b/Snake Game/style.css
@@ -13,7 +13,7 @@ body {
 
 :root {
     /* backgound colors */
-    --bg--primary--color: #2a2a2a;
+    --bg--primary--color: #070707;
 
     /* text colors */
     --text-primary-color: #ececec;
@@ -33,12 +33,12 @@ body {
     --border-primary-color: #333333;
 
     /* border radius */
-    --radius-xs: 4px;
-    --radius-sm: 8px;
-    --radius-md: 12px;
-    --radius-lg: 16px;
-    --radius-xl: 20px;
-    --radius-2xl: 24px;
+    --border-radius-xs: 4px;
+    --border-radius-sm: 8px;
+    --border-radius-md: 12px;
+    --border-radius-lg: 16px;
+    --border-radius-xl: 20px;
+    --border-radius-2xl: 24px;
 }
 
 html {
@@ -60,10 +60,30 @@ section .infos {
 
 section {
     padding: var(--space-2xl);
-
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    gap: var(--space-lg);
 }
 
 .info {
     padding: var(--space-sm) var(--space-md);
     border: 1px solid var(--border-primary-color);
+    border-radius: var(--border-radius-sm);
 }
+
+
+.board {
+    border: 1px solid var(--border-primary-color);
+    flex-grow: 1;
+    display: grid;
+    grid-template-columns: repeat(auto-fill,30px);
+    grid-template-rows: repeat(auto-fill,30px);
+}
+
+.block{
+    height: 30px;
+    width: 30px;
+    border: 1px solid var(--border-primary-color);
+}
+
