--- a/Snake Game/style.css
+++ b/Snake Game/style.css
@@ -110,9 +110,27 @@ justify-content: center;
 align-items: center;
 }
 
-.modal .start-game{
+.btn{
+    padding: var(--space-sm) var(--space-md);
+    border: none;
+    border-radius: var(--border-radius-sm);
+    cursor: pointer;
+    transition: all 0.3s ease;
+
+}
+
+.btn:hover{
+     transform: scale(1.1);
+}
+
+
+.modal .start-game,.modal .game-over{
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: var(--space-lg);
+}
+
+.modal .game-over{
+    display: none;
 }
