--- a/Snake Game/style.css
+++ b/Snake Game/style.css
@@ -87,6 +87,7 @@ section {
 .block{
     /* height: 30px;
     width: 30px; */
+    border-radius: 50%;
     border: 1px solid var(--border-primary-color);
 }
 
