--- a/KanbanProject/style.css
+++ b/KanbanProject/style.css
@@ -4,15 +4,24 @@
     box-sizing: border-box;
 }
 
+:root{
+    --primary-bg-color: #2d2d2d;
+    --primary-main-color :#e5e5e5;
+}
+.columns{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
 html,body{
+    color: var(--primary-main-color);
+    background-color: var(--primary-bg-color);
     width: 100%;
     height: 100%;
 }
-:root{
-    --primary-bg-color: #eaeaea
-}
 .navv{
 display: flex;
+padding: 20px;
 align-items: center;
 justify-content: space-between;
 max-height: 100vh;
