--- a/KanbanProject/style.css
+++ b/KanbanProject/style.css
@@ -1,63 +1,68 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+    * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
 
-:root {
-    --primary-bg-color: #2d2d2d;
-    --primary-bgd-color: #4a4a4a;
-    --primary-main-color: #e5e5e5;
-}
+    html,
+    body {
+        width: 100%;
+        background-color: #ffffff;
+        color: #e8e8e8;
+        height: 100%;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
 
-html,
-body {
-    width: 100%;
-    height: 100%;
-    background-color: var(--primary-bg-color);
-    color: var(--primary-main-color);
-}
+    .main {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+    }
 
-/* MAIN WRAPPER */
-.main {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
+    .navbar {
+        padding: 10px;
+        display: flex;
+        justify-content: space-between;
+    }
 
-/* NAVBAR */
-.navv {
-    display: flex;
-    padding: 20px;
-    align-items: center;
-    justify-content: space-between;
-}
+    .columns {
+        gap: 10px;
+        display: flex;
+        justify-content: space-between;
+        padding: 1px 10px 10px 10px;
+        flex: 1;
+    }
 
-/* COLUMNS CONTAINER */
-.columns {
-    flex: 1;
-    /* takes remaining height */
-    display: flex;
-    gap: 20px;
-    padding: 20px;
-}
+    .head {
+        display: flex;
+        justify-content: space-between;
+        background-color: #272727;
+        border-radius: 10px;
+        padding: 5px;
+    }
 
-/* EACH COLUMN */
-.same {
-    flex: 1;
-    background-color: var(--primary-bgd-color);
-    display: flex;
-    flex-direction: column;
-}
+    .mains {
+        width: 100%;
+        padding: 10px;
+        border-radius: 10px;
+        flex: 1;
+        background-color: rgb(255, 255, 255);
+    }
 
-/* HEADER */
-.head {
-    padding: 10px;
-    font-weight: bold;
-    border-bottom: 1px solid #666;
-}
 
-/* CONTENT AREA */
-.content {
-    padding: 10px;
-}
+
+    .head {
+        margin-bottom: 5px;
+    }
+
+    .tasks {
+        background-color: #e60000;
+        padding: 5px;
+        border: 1px solid black;
+        border-radius: 5px;
+    }
+
+    .dragging {
+        opacity: 1;
+    }
